# zen-omni

./: .gitignore  IMPORTANT_MODEL_CORRECTION.md  LLM.md  MIGRATION_NOTICE.md  MLX_README.md  README.md  README_FIXED.md  config.json  model_card.md  push_to_hf.sh  push_to_huggingface.py  pyproject.toml  upload_omni.py  web_demo.py  web_demo_captioner.py
.github/workflows/: test.yml
base-model/: README.md  chat_template.json  config.json  generation_config.json
cookbooks/: audio_caption.ipynb  audio_function_call.ipynb  audio_visual_dialogue.ipynb  audio_visual_interaction.ipynb  audio_visual_question.ipynb  image_math.ipynb  image_question.ipynb  live_dubbing.md  mixed_audio_analysis.ipynb  object_grounding.ipynb  ocr.ipynb  omni_captioner.ipynb  sound_analysis.ipynb  speech_recognition.ipynb  speech_translation.ipynb  video_description.ipynb  video_navigation.ipynb  video_scene_transition.ipynb
docker/: Dockerfile-omni-3-cu124
docs/: .gitignore  .source.ts  README.md  collections.ts  index.html  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml
docs/.github/workflows/: deploy.yml
docs/app/: global.css  layout.tsx  page.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page-backup.tsx  page-broken.tsx  page-simple.tsx  page.tsx
docs/assets/: index-C1an4SfQ.js  index-DS4gVFFD.css
docs/components/: logo.tsx
docs/concepts/: BYZANTINE_CONSENSUS.md
docs/content/docs/: index.mdx  introduction.mdx  meta.json
docs/lib/: source-loader.ts  source.ts  static-source.ts
docs/paper/: paper.aux  paper.blg  paper.out  paper.tex  references.bib
docs/public/: CNAME
docs/site/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/site/public/: CNAME
docs/site/src/: App.tsx  index.css
docs/site/src/components/: Footer.tsx  Layout.tsx  LuxLogo.tsx  Navigation.tsx
examples/: basic_usage.py
hf-cards/zen-omni/: README.md
hf-cards/zen-omni-30b-captioner/: README.md
hf-cards/zen-omni-30b-instruct/: README.md
hf-cards/zen-omni-30b-thinking/: README.md
paper/: zen_omni_technical_report.md
scripts/: upload_hf_cards.sh
src/zen_omni/: __init__.py  cli.py  pipeline.py  translator.py
training/: config.yaml  ds_config_zero2.json  train.sh  train_identity.sh  zen_identity_sft.yaml
training/data/: zen_identity.jsonl
training/identity/: dataset.json
(+6 files in other folders)
